objects/Export_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>Day_of_Week_Override__c</fullName>
        <inlineHelpText>If populated runs the timeslot export for this day(s) of week as opposed to the current date..
ie. Comma delimted ie. Tuesday,Friday</inlineHelpText>
        <label>Day of Week Override</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Service_Member_Territory_Type__c</fullName>
        <label>Default Service Member Territory Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Email_Addys__c</fullName>
        <defaultValue>&quot;rick@chicagosalesforceconsulting.com&quot;</defaultValue>
        <inlineHelpText>The Email Address(es) the output of the job will be sent to.</inlineHelpText>
        <label>Distribution Email Addys</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Export_File_Prefix__c</fullName>
        <label>Export File Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Export Setting</label>
    <pluralLabel>Export Settings</pluralLabel>
</CustomObject>